--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ li.selected .checkbox-fake {
   <div class="logo-container">
     <img src="logo.png" alt="Logo Restaurante">
     <div class="titulo-container">
-      <h1>Restaurante Colinas</h1>
+      <h1>Restaurante Kolinas</h1>
       <h2>🍽️ Cardápio de Hoje – <span id="diaSemana"></span>, <span id="dataHoje"></span></h2>
       <h3 id="horarioFuncionamento">Horário: --:-- - --:--</h3>
     </div>
@@ -610,4 +610,5 @@ document.getElementById("enviarWhats").addEventListener("click", () => {
 
 </body>
 </html>
+
 
