--- a/mais_pessoas.html
+++ b/mais_pessoas.html
@@ -46,7 +46,7 @@ label{display:block;margin-bottom:6px;cursor:pointer}
   <div class="logo-container">
     <img src="logo.png" alt="Logo Restaurante">
     <div class="titulo-container">
-      <h1>Restaurante Colinas</h1>
+      <h1>Restaurante Kolinas</h1>
       <h2>🍽️ Cardápio de Hoje – <span id="diaSemana"></span>, <span id="dataHoje"></span></h2>
       <h3 id="horarioFuncionamento">Horário: --:-- - --:--</h3>
     </div>
@@ -729,6 +729,7 @@ doc.save('Pedidos.pdf');
 </script>
 </body>
 </html>
+
 
 
 
