--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ li.selected .checkbox-fake {
     </div>
 
     <button id="abrirMaisPessoas" style="display:flex;align-items:left;gap:8px;padding:5px 8px;background:#007BFF;color:#fff;border:none;border-radius:8px;cursor:pointer;font-weight:bold;font-size:1rem;justify-content:flex-start;width:fit-content;margin-bottom:15px;">
-      <span style="font-size:1.2rem;">➕👥</span> <span></span>
+      <span style="font-size:1.2rem;">➕Mais Pedidos</span> <span></span>
     </button>
   </div>
 
@@ -610,5 +610,6 @@ document.getElementById("enviarWhats").addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
