--- a/mais_pessoas.html
+++ b/mais_pessoas.html
@@ -101,19 +101,10 @@ document.addEventListener("DOMContentLoaded", function() {
 
 
 
+  <div id="pedidosContainer"></div>
+<button id="adicionarPedido">➕Mais Pedido</button>
 
-
-
-
-
-
-
-
-
-
-
-
-  <label for="pagamento">💳 Forma de Pagamento (única para todos)</label>
+ <label for="pagamento">💳 Forma de Pagamento (única para todos)</label>
   <select id="pagamento">
     <option value="" disabled selected>Carregando opções...</option>
   </select>
@@ -125,13 +116,6 @@ document.addEventListener("DOMContentLoaded", function() {
 </div>
 
 
-
-
-
-
-
-  <div id="pedidosContainer"></div>
-<button id="adicionarPedido">➕Novo Pedido</button>
 
 
   <h3>📋 Pedidos Selecionados</h3>
@@ -729,6 +713,7 @@ doc.save('Pedidos.pdf');
 </script>
 </body>
 </html>
+
 
 
 
