--- a/index.html
+++ b/index.html
@@ -53,6 +53,14 @@ label{display:block;margin-bottom:6px;cursor:pointer}
   </div>
 
 
+
+
+<div id="pedidosContainer"></div>
+<button id="adicionarPedido">➕Mais Pedido</button>
+
+
+
+
  <label>Local de Entrega:</label>
 <select id="localEntrega" required>
   <option value="retirada" selected data-taxa="0">📍 Retirada no Local</option>
@@ -65,6 +73,9 @@ label{display:block;margin-bottom:6px;cursor:pointer}
 </div>
 
 <div id="taxaEntregaInfo">📍 Retirada no Local</div>
+
+
+
 
 <script>
 document.addEventListener("DOMContentLoaded", function() {
@@ -101,8 +112,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 
 
-  <div id="pedidosContainer"></div>
-<button id="adicionarPedido">➕Mais Pedido</button>
+  
 
  <label for="pagamento">💳 Forma de Pagamento (única para todos)</label>
   <select id="pagamento">
@@ -114,6 +124,13 @@ document.addEventListener("DOMContentLoaded", function() {
   <input type="number" id="valorPago" placeholder="Digite o valor pago" min="0" step="0.01">
   <p id="trocoInfo" style="margin-top:5px; font-weight:bold;"></p>
 </div>
+
+
+
+
+
+
+
 
 
 
@@ -398,6 +415,10 @@ container.scrollIntoView({ behavior: "smooth", block: "end" });
       } else {
         acompLis.forEach(li => {
           li.classList.toggle("selected", acompanhamentosPadrao[key]?.includes(li.dataset.item));
+
+
+
+
           li.style.pointerEvents = "auto";
         });
         pedidoObj.acompanhamentos = Array.from(acompLis).filter(li => li.classList.contains("selected")).map(li => li.dataset.item);
@@ -515,6 +536,7 @@ container.scrollIntoView({ behavior: "smooth", block: "end" });
 
 
 // ========== ENVIAR WHATSAPP E GERAR PDF ==========
+
 document.getElementById("enviarWhats").addEventListener("click", () => {
   const endereco = document.getElementById("endereco").value.trim();
   let localNome = document.getElementById("localEntrega").value;
@@ -553,42 +575,60 @@ document.getElementById("enviarWhats").addEventListener("click", () => {
       : `💸 Falta: R$ ${Math.abs(troco).toFixed(2)}`;
   }
 
-// ===== WhatsApp =====
+ 
+  // ===== WhatsApp =====
 let taxaTexto = taxa > 0 
   ? `🏍️ Taxa de Entrega: R$${taxa.toFixed(2)}`
   : ""; // remove "Retirar no Local" daqui
 
-let msg = `🍽️ *Pedidos dos clientes: ${nomesClientes}*\n📍 Local: ${localNome}\n` +
-          (taxa > 0 ? "📍 Endereço: " + endereco + "\n" : "") +
-          `💳 Pagamento: ${pagamentoGlobal}\n` +
-          (taxaTexto ? taxaTexto + "\n" : "");
+let msg = `*Pedidos dos clientes: ${nomesClientes}*\n` +
+          `Local: ${localNome}\n` +
+          `Pagamento: ${pagamentoGlobal}\n`;
+
+if (taxaTexto) {
+  msg += `${taxaTexto}\n`;
+}
 
 if (trocoTexto) {
-  msg += `Valor do Troco : R$${trocoTexto.replace(/[^\d.,]/g, '')}\n`;
+  msg += `${trocoTexto}\n`;
 }
 
 let totalWhats = 0;
 
 pedidos.forEach((p, i) => {
-  msg += `\n📌 Pedido ${i + 1} - ${p.nome || "Cliente"}\n`;
+  msg += `\n──────────────────\n`;
+  msg += `*Pedido ${i + 1} - ${p.nome || "Cliente"}*\n`;
+
   let subtotal = p.valorMarmita || 0;
 
-  if (p.marmita) msg += `🍱 Marmita ${p.marmita} - R$${(p.valorMarmita || 0).toFixed(2)}\n`;
-  if (p.carnes) p.carnes.forEach(c => msg += `🍖 ${c}\n`);
-  if (p.acompanhamentos) p.acompanhamentos.forEach(a => msg += `🥗 ${a}\n`);
+  if (p.marmita) {
+    msg += `Marmita: ${p.marmita} - R$${(p.valorMarmita || 0).toFixed(2)}\n`;
+  }
 
+  if (p.carnes && p.carnes.length) {
+    msg += ` ${p.carnes.join(", ")}\n`;
+  }
+
+  if (p.acompanhamentos && p.acompanhamentos.length) {
+    msg += ` ${p.acompanhamentos.join(", ")}\n`;
+  }
+
+  // Seção Bebidas
   if (p.refrigerantes && p.refrigerantes.length) {
+    msg += `--------\n*Bebidas:*\n`;
     p.refrigerantes.forEach(r => {
-      msg += `🥤 ${r.nome} x${r.qtd} - R$${(r.preco * r.qtd).toFixed(2)}\n`;
+      msg += `   - ${r.nome} x${r.qtd} - R$${(r.preco * r.qtd).toFixed(2)}\n`;
       subtotal += r.preco * r.qtd;
     });
   }
 
+  // Adicionais
   if (p.adicionais && p.adicionais.trim() !== "") {
-    msg += `📝 Adicionais: ${p.adicionais} - R$4.00\n`;
+    msg += `Adicionais: ${p.adicionais} - R$4.00\n`;
     subtotal += 4.00;
   }
 
+  // Observações
   if (p.observacao && p.observacao.trim() !== "") {
     msg += `💬 Obs: ${p.observacao}\n`;
   }
@@ -598,52 +638,50 @@ pedidos.forEach((p, i) => {
 });
 
 totalWhats += taxa;
-msg += `\n💸 *TOTAL GERAL: R$${totalWhats.toFixed(2)}*`;
-
-window.open(`https://wa.me/+556192633504?text=${encodeURIComponent(msg)}`, "_blank");
+msg += `\n*TOTAL GERAL: R$${totalWhats.toFixed(2)}*`;
 
 
+  window.open(`https://wa.me/+556192633504?text=${encodeURIComponent(msg)}`, "_blank");
 
+  // ===== PDF SIMPLES =====
+  const { jsPDF } = window.jspdf;
+  const doc = new jsPDF({ orientation: 'portrait', unit: 'pt', format: [226, 1000] });
+  const t = texto => texto.normalize("NFC");
+  const larguraMax = 206;
 
-// ===== PDF SIMPLES =====
-const { jsPDF } = window.jspdf;
-const doc = new jsPDF({ orientation: 'portrait', unit: 'pt', format: [226, 1000] });
-const t = texto => texto.normalize("NFC");
-const larguraMax = 206;
+  // Cabeçalho
+  doc.setFont('helvetica', 'bold'); 
+  doc.setFontSize(14); 
+  doc.text(t('Restaurante Kolinas'), 113, 20, { align: 'center' });
 
-// Cabeçalho
-doc.setFont('helvetica', 'bold'); 
-doc.setFontSize(14); 
-doc.text(t('Restaurante Kolinas'), 113, 20, { align: 'center' });
+  const hoje = new Date();
+  const dia = String(hoje.getDate()).padStart(2, '0');
+  const mes = String(hoje.getMonth() + 1).padStart(2, '0');
+  const ano = hoje.getFullYear();
 
-const hoje = new Date();
-const dia = String(hoje.getDate()).padStart(2, '0');
-const mes = String(hoje.getMonth() + 1).padStart(2, '0');
-const ano = hoje.getFullYear();
+  doc.setFont('helvetica', 'normal'); 
+  doc.setFontSize(10); 
+  doc.text(t(`Pedidos de ${dia}/${mes}/${ano}`), 113, 35, { align: 'center' });
 
-doc.setFont('helvetica', 'normal'); 
-doc.setFontSize(10); 
-doc.text(t(`Pedidos de ${dia}/${mes}/${ano}`), 113, 35, { align: 'center' });
+  let y = 55;
+  [
+    `Local: ${localNome}`,
+    taxa > 0 ? `Endereço: ${endereco}` : null,
+    `Pagamento: ${pagamentoGlobal}`,
+    taxa > 0 ? `Taxa de entrega: R$${taxa.toFixed(2)}` : "Retirar no Local",
+    trocoTexto ? trocoTexto.replace(/^💰\s*/, '') : null
+  ].forEach(texto => {
+      if (texto) {
+          const linhas = doc.splitTextToSize(t(texto), larguraMax);
+          doc.text(linhas, 10, y);
+          y += linhas.length * 10;
+      }
+  });
+  y += 5;
 
-let y = 55;
-[
-  `Local: ${localNome}`,
-  taxa > 0 ? `Endereço: ${endereco}` : null,
-  `Pagamento: ${pagamentoGlobal}`,
-  taxa > 0 ? `Taxa de entrega: R$${taxa.toFixed(2)}` : "Retirar no Local",
-  trocoTexto ? trocoTexto.replace(/^💰\s*/, '') : null // <-- troco só aqui em cima
-].forEach(texto => {
-    if (texto) {
-        const linhas = doc.splitTextToSize(t(texto), larguraMax);
-        doc.text(linhas, 10, y);
-        y += linhas.length * 10;
-    }
-});
-y += 5;
+  let totalGeralPDF = 0;
 
-let totalGeralPDF = 0;
-
-pedidos.forEach((p, i) => {
+  pedidos.forEach((p, i) => {
     doc.setDrawColor(0);
     doc.setLineWidth(0.5);
     doc.line(10, y, 216, y);
@@ -662,26 +700,25 @@ pedidos.forEach((p, i) => {
     if (p.acompanhamentos && p.acompanhamentos.length) campos.push({ titulo: 'Acompanhamentos:', valor: `${p.acompanhamentos.join(", ")}` });
 
     if (p.refrigerantes && p.refrigerantes.length) {
-        const bebidasText = p.refrigerantes.map(r => `${r.nome} x${r.qtd} - R$${(r.preco*r.qtd).toFixed(2)}`).join(", ");
-        campos.push({ titulo: 'Bebidas:', valor: bebidasText });
-        p.refrigerantes.forEach(r => subtotal += r.preco*r.qtd);
+      campos.push({ titulo: 'Bebidas:', valor: p.refrigerantes.map(r => `${r.nome} x${r.qtd} - R$${(r.preco*r.qtd).toFixed(2)}`).join("\n") });
+      p.refrigerantes.forEach(r => subtotal += r.preco*r.qtd);
     }
 
     if (p.adicionais && p.adicionais.trim() !== "") {
-        campos.push({ titulo: 'Adicionais:', valor: `${p.adicionais} - R$4.00` });
-        subtotal += 4.00;
+      campos.push({ titulo: 'Adicionais:', valor: `${p.adicionais} - R$4.00` });
+      subtotal += 4.00;
     }
 
     if (p.observacao && p.observacao.trim() !== "") {
-        campos.push({ titulo: 'Observação:', valor: p.observacao });
+      campos.push({ titulo: 'Observação:', valor: p.observacao });
     }
 
     campos.forEach(c => {
-        doc.setFont('helvetica', 'normal');
-        doc.setFontSize(9);
-        const linhas = doc.splitTextToSize(`${c.titulo} ${c.valor}`, larguraMax);
-        doc.text(linhas, 10, y);
-        y += linhas.length * 10;
+      doc.setFont('helvetica', 'normal');
+      doc.setFontSize(9);
+      const linhas = doc.splitTextToSize(`${c.titulo} ${c.valor}`, larguraMax);
+      doc.text(linhas, 10, y);
+      y += linhas.length * 10;
     });
 
     doc.setFont('helvetica', 'bold');
@@ -690,30 +727,28 @@ pedidos.forEach((p, i) => {
     y += 15;
 
     totalGeralPDF += subtotal;
+  });
+
+  // Linha antes do total
+  doc.setDrawColor(0);
+  doc.setLineWidth(0.8);
+  doc.line(10, y, 216, y);
+  y += 12;
+
+  // Total Geral
+  totalGeralPDF += taxa;
+  doc.setFont('helvetica', 'bold');
+  doc.setFontSize(12);
+  doc.text(`TOTAL GERAL: R$${totalGeralPDF.toFixed(2)}`, 10, y);
+
+  doc.save('Pedidos.pdf');
 });
 
-// Linha antes do total
-doc.setDrawColor(0);
-doc.setLineWidth(0.8);
-doc.line(10, y, 216, y);
-y += 12; // <-- mais espaço antes do TOTAL GERAL
 
-// Total Geral
-totalGeralPDF += taxa;
-doc.setFont('helvetica', 'bold');
-doc.setFontSize(12);
-doc.text(`TOTAL GERAL: R$${totalGeralPDF.toFixed(2)}`, 10, y);
-
-doc.save('Pedidos.pdf');
-
-
-
-});
   
 </script>
 </body>
 </html>
-
 
 
 
