--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ label{display:block;margin-bottom:6px;cursor:pointer}
 
 
 <div id="pedidosContainer"></div>
-<button id="adicionarPedido">➕Mais Pedido</button>
+<button id="adicionarPedido">➕Adicionar Pedido</button>
 
 
 
@@ -749,6 +749,7 @@ msg += `\n*TOTAL GERAL: R$${totalWhats.toFixed(2)}*`;
 </script>
 </body>
 </html>
+
 
 
 
