--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@ document.addEventListener("DOMContentLoaded", function() {
       enderecoInput.readOnly = true;
       enderecoInput.required = false;
       enderecoInput.style.background = "#eee";
-      taxaEntregaInfo.innerHTML = "📍 Pegar no Local";
+      taxaEntregaInfo.innerHTML = "🏠 Retirar no Local";
+
     } else {
       enderecoContainer.style.display = "block";
       enderecoInput.value = "";
@@ -211,6 +212,53 @@ fetch('cardapio.json?t=' + new Date().getTime())
   document.getElementById("horarioFuncionamento").textContent = 
     `Horário: ${data.horarioFuncionamento.abertura} - ${data.horarioFuncionamento.fechamento}`;
 
+// ========== BLOQUEAR PEDIDOS FORA DO HORÁRIO ==========
+function verificarHorarioFuncionamento() {
+  const agora = new Date();
+  const horaAtual = agora.getHours() * 60 + agora.getMinutes();
+
+  const [aberturaHora, aberturaMin] = data.horarioFuncionamento.abertura.split(":").map(Number);
+  const [fechamentoHora, fechamentoMin] = data.horarioFuncionamento.fechamento.split(":").map(Number);
+
+  const aberturaMinutos = aberturaHora * 60 + aberturaMin;
+  const fechamentoMinutos = fechamentoHora * 60 + fechamentoMin;
+
+  const dentroDoHorario = horaAtual >= aberturaMinutos && horaAtual <= fechamentoMinutos;
+
+  const btnAdicionar = document.getElementById("adicionarPedido");
+  const btnEnviar = document.getElementById("enviarWhats");
+
+  if (!dentroDoHorario) {
+    btnAdicionar.disabled = true;
+    btnEnviar.disabled = true;
+    btnAdicionar.style.background = "#ccc";
+    btnEnviar.style.background = "#ccc";
+
+    const aviso = document.createElement("div");
+    aviso.id = "avisoHorario";
+    aviso.style.color = "red";
+    aviso.style.fontWeight = "bold";
+    aviso.style.textAlign = "center";
+    aviso.style.marginTop = "10px";
+    aviso.textContent = "⏰ Pedidos disponíveis apenas durante o horário de funcionamento!";
+    document.querySelector(".cardapio").appendChild(aviso);
+  } else {
+    btnAdicionar.disabled = false;
+    btnEnviar.disabled = false;
+    btnAdicionar.style.background = "#007BFF";
+    btnEnviar.style.background = "#25D366";
+    const avisoExistente = document.getElementById("avisoHorario");
+    if (avisoExistente) avisoExistente.remove();
+  }
+}
+
+// Verifica ao carregar e a cada 1 minuto
+verificarHorarioFuncionamento();
+setInterval(verificarHorarioFuncionamento, 60000);
+
+
+
+
   // Locais
   const localSelect = document.getElementById("localEntrega");
   localSelect.innerHTML = '<option value="" disabled selected>Selecione o local</option>';
@@ -222,117 +270,107 @@ fetch('cardapio.json?t=' + new Date().getTime())
     localSelect.appendChild(opt);
   });
 
+  // Pagamento
+  const pagamentoSelect = document.getElementById("pagamento");
+  pagamentoSelect.innerHTML = '';
+  if (data.formasPagamento && Array.isArray(data.formasPagamento) && data.formasPagamento.length) {
+    const defaultOpt = document.createElement('option');
+    defaultOpt.value = '';
+    defaultOpt.textContent = 'Selecione a forma de pagamento';
+    defaultOpt.disabled = true;
+    defaultOpt.selected = true;
+    pagamentoSelect.appendChild(defaultOpt);
 
-
-// Pagamento
-const pagamentoSelect = document.getElementById("pagamento");
-pagamentoSelect.innerHTML = '';
-if (data.formasPagamento && Array.isArray(data.formasPagamento) && data.formasPagamento.length) {
-  const defaultOpt = document.createElement('option');
-  defaultOpt.value = '';
-  defaultOpt.textContent = 'Selecione a forma de pagamento';
-  defaultOpt.disabled = true;
-  defaultOpt.selected = true;
-  pagamentoSelect.appendChild(defaultOpt);
-
-  data.formasPagamento.forEach(fp => {
-    const o = document.createElement('option');
-    o.value = fp;
-    o.textContent = fp;
-    pagamentoSelect.appendChild(o);
-  });
-} else {
-  pagamentoSelect.innerHTML = `
-    <option value="" disabled selected>Selecione a forma de pagamento</option>
-    <option value="Dinheiro">Dinheiro</option>
-    <option value="Pix">Pix</option>
-    <option value="Cartão">Cartão</option>
-  `;
-}
-
-const trocoContainer = document.getElementById("trocoContainer");
-const valorPagoInput = document.getElementById("valorPago");
-const trocoInfo = document.getElementById("trocoInfo");
-
-// Função para calcular o troco
-function atualizarTroco() {
-  const valorPago = parseFloat(valorPagoInput.value) || 0;
-  const taxa = parseFloat(document.getElementById('localEntrega').selectedOptions[0]?.dataset.taxa || 0);
-
-  let totalGeral = pedidos.reduce((total, p) => {
-    let subtotal = p.valorMarmita || 0;
-    if (p.refrigerantes) p.refrigerantes.forEach(r => subtotal += r.preco * r.qtd);
-    if (p.adicionais) subtotal += 4.00;
-    return total + subtotal;
-  }, 0) + taxa;
-
-  if (valorPago > 0) {
-    const troco = valorPago - totalGeral;
-    trocoInfo.textContent = troco >= 0
-      ? `💰 Troco estimado: R$ ${troco.toFixed(2)}`
-      : `💸 Falta: R$ ${Math.abs(troco).toFixed(2)}`;
+    data.formasPagamento.forEach(fp => {
+      const o = document.createElement('option');
+      o.value = fp;
+      o.textContent = fp;
+      pagamentoSelect.appendChild(o);
+    });
   } else {
-    trocoInfo.textContent = "";
+    pagamentoSelect.innerHTML = `
+      <option value="" disabled selected>Selecione a forma de pagamento</option>
+      <option value="Dinheiro">Dinheiro</option>
+      <option value="Pix">Pix</option>
+      <option value="Cartão">Cartão</option>
+    `;
   }
-}
 
-// Exibir troco apenas quando "Dinheiro" for selecionado
-pagamentoSelect.addEventListener("change", () => {
-  if (pagamentoSelect.value === "Dinheiro") {
-    trocoContainer.style.display = "block";
-    atualizarTroco();
-  } else {
-    trocoContainer.style.display = "none";
-    trocoInfo.textContent = "";
-  }
-});
+  const trocoContainer = document.getElementById("trocoContainer");
+  const valorPagoInput = document.getElementById("valorPago");
+  const trocoInfo = document.getElementById("trocoInfo");
 
-// Atualiza troco enquanto digita o valor pago
-valorPagoInput.addEventListener("input", atualizarTroco);
+  // Função para calcular o troco
+  function atualizarTroco() {
+    const valorPago = parseFloat(valorPagoInput.value) || 0;
+    const taxa = parseFloat(document.getElementById('localEntrega').selectedOptions[0]?.dataset.taxa || 0);
 
+    let totalGeral = pedidos.reduce((total, p) => {
+      let subtotal = p.valorMarmita || 0;
+      if (p.refrigerantes) p.refrigerantes.forEach(r => subtotal += r.preco * r.qtd);
+      if (p.adicionais) subtotal += 4.00;
+      return total + subtotal;
+    }, 0) + taxa;
 
-
-
-
-
- 
-
-// Atualiza taxa + endereço quando muda local
-localSelect.addEventListener('change', () => {
-  const enderecoInput = document.getElementById("endereco");
-  const enderecoContainer = document.getElementById("enderecoContainer");
-  const taxa = parseFloat(localSelect.selectedOptions[0]?.dataset.taxa || 0);
-  const localEscolhido = localSelect.value.toLowerCase();
-
-  document.getElementById('taxaEntregaInfo').textContent = 
-    `🏍️ Taxa de entrega: R$ ${taxa.toFixed(2)}`;
-
-  if (localEscolhido.includes("retirada")) {
-    // Retirada no local → não precisa de endereço
-    enderecoContainer.style.display = "none";
-    enderecoInput.value = "Retirada no Local";
-    enderecoInput.readOnly = true;
-    enderecoInput.required = false;
-    enderecoInput.style.background = "#eee";
-  } else {
-    // Entrega → mostra campo endereço
-    enderecoContainer.style.display = "block";
-    if (enderecoInput.value === "Retirada no Local") {
-      enderecoInput.value = "";
+    if (valorPago > 0) {
+      const troco = valorPago - totalGeral;
+      trocoInfo.textContent = troco >= 0
+        ? `💰 Troco estimado: R$ ${troco.toFixed(2)}`
+        : `💸 Falta: R$ ${Math.abs(troco).toFixed(2)}`;
+    } else {
+      trocoInfo.textContent = "";
     }
-    enderecoInput.readOnly = false;
-    enderecoInput.required = true;
-    enderecoInput.style.background = "#fff";
   }
 
-  atualizarPedido();
-});
+  // Exibir troco apenas quando "Dinheiro" for selecionado
+  pagamentoSelect.addEventListener("change", () => {
+    if (pagamentoSelect.value === "Dinheiro") {
+      trocoContainer.style.display = "block";
+      atualizarTroco();
+    } else {
+      trocoContainer.style.display = "none";
+      trocoInfo.textContent = "";
+    }
+  });
 
+  // Atualiza troco enquanto digita o valor pago
+  valorPagoInput.addEventListener("input", atualizarTroco);
+
+  // Atualiza taxa + endereço quando muda local
+  localSelect.addEventListener('change', () => {
+    const enderecoInput = document.getElementById("endereco");
+    const enderecoContainer = document.getElementById("enderecoContainer");
+    const taxa = parseFloat(localSelect.selectedOptions[0]?.dataset.taxa || 0);
+    const localEscolhido = localSelect.value.toLowerCase();
+
+    document.getElementById('taxaEntregaInfo').textContent = 
+      `🏍️ Taxa de entrega: R$ ${taxa.toFixed(2)}`;
+
+    if (localEscolhido.includes("retirada")) {
+      enderecoContainer.style.display = "none";
+      enderecoInput.value = "Retirada no Local";
+      enderecoInput.readOnly = true;
+      enderecoInput.required = false;
+      enderecoInput.style.background = "#eee";
+    } else {
+      enderecoContainer.style.display = "block";
+      if (enderecoInput.value === "Retirada no Local") {
+        enderecoInput.value = "";
+      }
+      enderecoInput.readOnly = false;
+      enderecoInput.required = true;
+      enderecoInput.style.background = "#fff";
+    }
+
+    atualizarPedido();
+  });
+
+  // ✅ Cria o primeiro pedido automaticamente após o cardápio carregar
+  criarPedido();
 })
-.catch(err=>{ console.error('Erro ao carregar cardapio.json', err); });
-
-
-
+.catch(err => {
+  console.error('Erro ao carregar cardapio.json', err);
+});
 
 
 
@@ -385,6 +423,10 @@ container.scrollIntoView({ behavior: "smooth", block: "end" });
     atualizarPedido();
   });
   
+
+
+
+
 
   // ========== CONFIGURAR MARMITA ==========
   let limiteCarnes = 0;
@@ -643,9 +685,15 @@ pedidos.forEach((p, i) => {
 });
 
 totalWhats += taxa;
-msg += `\n*TOTAL GERAL: R$${totalWhats.toFixed(2)}*`;
 
-window.open(`https://wa.me/+556192633504?text=${encodeURIComponent(msg)}`, "_blank");
+msg += `\n──────────────────\n`;
+msg += `*Total Geral (com taxa): R$${totalWhats.toFixed(2)}*`;
+
+const numeroWhats = "556192633504"; // seu número
+const url = `https://wa.me/${numeroWhats}?text=${encodeURIComponent(msg)}`;
+window.open(url, "_blank");
+
+
 
 
   // ===== PDF SIMPLES =====
@@ -750,13 +798,9 @@ window.open(`https://wa.me/+556192633504?text=${encodeURIComponent(msg)}`, "_bla
 });
 
 
-  
 </script>
 </body>
 </html>
-
-
-
 
 
 
