--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ label{display:block;margin-bottom:6px;cursor:pointer}
   <div class="logo-container">
     <img src="logo.png" alt="Logo Restaurante">
     <div class="titulo-container">
-      <h1>Restaurante Kolinas</h1>
+      <h1>Restaurante Kolina</h1>
       <h2>🍽️ Cardápio de Hoje – <span id="diaSemana"></span>, <span id="dataHoje"></span></h2>
       <h3 id="horarioFuncionamento">Horário: --:-- - --:--</h3>
     </div>
@@ -801,6 +801,7 @@ window.open(url, "_blank");
 </script>
 </body>
 </html>
+
 
 
 
